@@ -2,6 +2,7 @@ sbuild (0.63.0-1) unstable; urgency=low
 
   [ Wookey ]
   * Merge cross-build support (thanks to Hector Oron)
+  * Add multiarch cross-build support
 
  -- Roger Leigh <rleigh@debian.org>  Thu, 15 Dec 2011 13:03:01 +0000
 
